--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Cloning Youtube with VanilaJs and NodeJs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Ramin Esmzad",
   "license": "ISC",
